--- a/README.org
+++ b/README.org
@@ -30,8 +30,15 @@
 
 ** Usage Guide
 
-   1. Open [[http://www.posemaniacs.com/thirtysecond][Posemaniacs]] page and =Posemaniacs-Timer=.
-   2. Set seconds & countdown on both interface.
+   1. Open [[http://www.posemaniacs.com/thirtysecond][Posemaniacs]] page and run =Posemaniacs-Timer=.
+   2. Set *the same seconds & countdown* on both's interfaces.
    3. Press =Start= on =Posemaniacs-Timer=, enter a fullscreen interface.
    4. Now move your mouse to *START* on Posemaniacs page and click. Timer starts.
 
+** License
+
+WTFPL 2.0
+
+kuanyui (ɔ) Copyleft 2014
+
+This program is free software. It comes without any warranty, to the extent permitted by applicable law. You can redistribute it and/or modify it under the terms of the Do What The Fuck You Want To Public License, Version 2, as published by Sam Hocevar. See http://www.wtfpl.net/ for more details.
